tests/specs/run/cts/import_export_equals/mod.mts
import add from "./add.cts";

console.log(add(1, "test"));
